--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,47 @@ body{
     font-family: nunito;}
 
 footer{font-size: 12px;}
+header{
+
+background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.3)), url("/image/toulouse11.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+color:white;
+padding:270px;}
+
+h1{line-height: 1;
+font-weight: 900;
+font-size: 90px;
+text-align: center;
+text-shadow: 3px 3px 1px purple;}
+
+h2{line-height: 1;
+font-weight: 700;
+font-size: 66px;
+text-align: center;
+text-shadow: 4px 4px 2px #523243;}
+
+h3{line-height: 1;
+font-weight: 300;
+font-size: 36px;
+text-align: center;}
+
+button{
+    text-align: center;
+    border:2px solid magenta;
+    margin: 0 auto;
+    display:block;
+    padding: 20px 30px;
+    background-color: pink;
+    border-radius: 6%;
+    font-family: nunito;
+    color:purple;
+    font-weight: 800;
+    font-size: 18px;
+    box-shadow: 0px 1px 2px 3px #523243;
+}
+
+.container{
+max-width:1200px;
+margin: 0px auto;
+}
