--- a/src/style.css
+++ b/src/style.css
@@ -2,25 +2,29 @@ body{
     font-family: nunito;}
 
 footer{font-size: 12px;}
-header{
 
-background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.3)), url("/image/toulouse11.jpg");
+header{
+background-image: linear-gradient(rgba(20,0,10,0.5), rgba(20,0,10,0.6)), url("/image/toulouse11.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 color:white;
-padding:270px;}
+padding:220px 0;
+background-position: bottom;
+}
 
-h1{line-height: 1;
+h1{
+line-height: 1;
 font-weight: 900;
-font-size: 90px;
+font-size: 96px;
 text-align: center;
-text-shadow: 3px 3px 1px purple;}
+text-shadow: 6px 6px 2px rgb(61, 1, 90);}
+
 
 h2{line-height: 1;
 font-weight: 700;
 font-size: 66px;
 text-align: center;
-text-shadow: 4px 4px 2px #523243;}
+text-shadow: 5px 5px 3px rgb(61, 1, 90)}
 
 h3{line-height: 1;
 font-weight: 300;
@@ -29,7 +33,7 @@ text-align: center;}
 
 button{
     text-align: center;
-    border:2px solid magenta;
+    border:2px solid rgb(41, 1, 90);
     margin: 0 auto;
     display:block;
     padding: 20px 30px;
@@ -43,6 +47,10 @@ button{
 }
 
 .container{
-max-width:1200px;
-margin: 0px auto;
+max-width:1400px;
+margin: 0 auto;
+}
+@media(max-width:900px){
+    h1{font-size:60px;}
+    h2{font-size:45px;}
 }
