--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,8 @@ opacity: 0.9;
 background-repeat: no-repeat;
 background-position: bottom, 30px;
 color:white;
-padding: 30px;}
+padding: 30px;
+margin:0 auto;}
 
 header{
 background-image: linear-gradient(rgba(20,0,10,0.5), rgba(20,0,10,0.6)), url("/image/toulouse11.jpg");
@@ -86,7 +87,10 @@ margin: 0 auto;
 @media(max-width:900px){
     h1{font-size:60px;}
     h2{font-size:45px;}
+    footer{font-size: 12px;}
+    .footer-grid{
+    grid-template-columns: 1fr;}
 }
 .icons{
-    letter-spacing: 2;
+    margin-inline: 10px;
 }
