--- a/src/style.css
+++ b/src/style.css
@@ -57,8 +57,8 @@ line-height: 1.5;}
 
 p{font-size:16px;
 text-align: left;
-margin-top: 20%;
 }
+header p{margin-top: 20%;}
 
 footer h3{text-align: left;}
 .footer-grid{
@@ -122,6 +122,8 @@ margin: 0 auto;}
 }
 
 .center{text-align: center;}
+
+.bottom{margin-top: 20%;}
 @media(max-width:900px){
     h1{font-size:60px;}
     h2{font-size:45px;}
