--- a/src/style.css
+++ b/src/style.css
@@ -40,8 +40,8 @@ h3{line-height: 1;
 font-weight: 500;
 font-size: 18px;
 text-align: center;}
-
-
+h4{font-size: 18px;}
+h5{font-size: 15px;}
 
 
 ul{
@@ -79,18 +79,21 @@ margin: 0 auto;
 }
 
 .why-toulouse{
-    margin:3%;
+
      display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 5px;
     text-align: left;
+    width:100%;
+    margin-top: 8%;
+    margin-bottom: 30px;
    
 }
 .why-heading{
     font-size: 34px;
     color:rgba(61, 1, 90, 0.7);
     text-shadow: 1px 1px 1px gray;
-    margin-top: 0;
+    margin-top: 5px;
     margin-bottom: 28px;
 }
 .why-paragraph{
@@ -123,7 +126,54 @@ margin: 0 auto;}
 
 .center{text-align: center;}
 
+.cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap:16px;
+    width: 100%;
+}
+.card{
+    background-color:white;
+    padding-bottom:20px;
+    border-radius: 3px;
+    position:relative;
+}
+
+.card-pics{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+border-radius: 2px;}
+
+.card-text{
+    margin:0px 10px 50px 10px;
+    line-height: 1.5;
+
+}
+img{border-radius: 2px;}
+
+.btn{text-align: center;
+    border:1px solid rgb(41, 1, 90);
+    padding: 6px 8px;
+    background-color: pink;
+    border-radius: 7px;
+    color:purple;
+    font-weight: 600;
+    font-size: 14px;
+    box-shadow: 0px 1px 1px 0px #523243;
+    text-decoration: none;
+position:absolute; bottom:20px;}
+
 .bottom{margin-top: 20%;}
+.bottom-margin{
+    margin-bottom: 0;
+}
+
+@media(max-width:700px){
+    .cards{
+    display: grid;
+    grid-template-columns:1fr;}
+}
+
 @media(max-width:900px){
     h1{font-size:60px;}
     h2{font-size:45px;}
@@ -133,6 +183,11 @@ margin: 0 auto;}
     grid-template-columns: 1fr;
 margin-right: 20%;
 margin-left: 7%;}
+   .cards{
+    grid-template-columns:1fr;}
+.btn{padding: 12px 15px;}}
+
+
     
 @media(max-width:1000px)
 {    .why-toulouse{
@@ -141,4 +196,18 @@ margin-left: 7%;}
 .bar{margin-top:15%;}
 .cheese{
 margin-bottom:10%;}
-}}
+}
+
+.my-favorite{
+    background-color:rgb(244, 230, 220);
+    padding:2%;
+    margin-top: 8%;
+    margin-bottom: 8%;
+    border-radius: 3px;
+}
+.favorite-header{font-size: 36px;
+font-weight: bold;
+opacity: 0.7;
+margin-bottom: 30px;
+margin-top: 20px;
+padding:1%;}
