--- a/src/style.css
+++ b/src/style.css
@@ -241,8 +241,8 @@ margin-left: 7%;}
 .cheese{
 margin-bottom:10%;
 }
-.instap{font-size:20px;
-margin: 20px auto;
-text-align: center;
+.instap{font-size:18px;
+margin-left:10px;
+margin-right:10px;
 }
 }
