--- a/src/style.css
+++ b/src/style.css
@@ -229,7 +229,7 @@ margin-left: 7%;}
 .instagram{
     grid-template-columns: 1fr;}
     table{margin-left:4%;}
-}
+.favorite-header{font-size: 30px;}}
 
 
     
