--- a/src/style.css
+++ b/src/style.css
@@ -214,8 +214,8 @@ opacity:0.8; margin-top:8px;}
 
 
 @media(max-width:900px){
-    h1{font-size:60px;}
-    h2{font-size:45px;}
+    h1{font-size:58px;}
+    h2{font-size:40px;}
     footer{font-size: 12px;
     margin:30px auto;}
     .footer-grid{
@@ -235,14 +235,15 @@ margin-left: 7%;}
     
 @media(max-width:1000px){
    .why-toulouse{
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr;}
+    .why-heading{font-size:28px;}
 }
 .bar{margin-top:15%;}
 .cheese{
 margin-bottom:10%;
 }
 .instap{font-size:18px;
-margin-left:10px;
+margin-left:15px;
 margin-right:10px;
 }
 }
